// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Event /> matches snapshot if there are attendees and reserves 1`] = `
<div
  className="event"
  data-event-id={1}
>
  <h4>
    Fake name
  </h4>
  <p>
    Fake description
  </p>
  <p>
    <b>
      Start: 098739084
    </b>
  </p>
  <h5>
    Attendees
  </h5>
  <EventListAttendees
    attendees={
      Array [
        Object {
          "reserve": false,
        },
        Object {
          "reserve": false,
        },
      ]
    }
    eventId={1}
    isReserves={false}
  />
  <h5
    className="spacer-15"
  >
    Reserves
  </h5>
  <EventListAttendees
    attendees={
      Array [
        Object {
          "reserve": true,
        },
      ]
    }
    eventId={1}
    isReserves={true}
  />
  <EventActions
    adminSection={true}
    attendances={
      Array [
        1,
        2,
        3,
      ]
    }
    id={1}
    onCancelError={[Function]}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
    onJoinError={[Function]}
    onUpdateAttendance={[Function]}
  />
</div>
`;

exports[`<Event /> matches snapshot if there are attendees but no reserves 1`] = `
<div
  className="event"
  data-event-id={1}
>
  <h4>
    Fake name
  </h4>
  <p>
    Fake description
  </p>
  <p>
    <b>
      Start: 098739084
    </b>
  </p>
  <h5>
    Attendees
  </h5>
  <EventListAttendees
    attendees={
      Array [
        Object {
          "reserve": false,
        },
        Object {
          "reserve": false,
        },
        Object {
          "reserve": false,
        },
      ]
    }
    eventId={1}
    isReserves={false}
  />
  <EventActions
    adminSection={true}
    attendances={
      Array [
        1,
        2,
        3,
      ]
    }
    id={1}
    onCancelError={[Function]}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
    onJoinError={[Function]}
    onUpdateAttendance={[Function]}
  />
</div>
`;

exports[`<Event /> matches snapshot if there no attendees 1`] = `
<div
  className="event"
  data-event-id={1}
>
  <h4>
    Fake name
  </h4>
  <p>
    Fake description
  </p>
  <p>
    <b>
      Start: 098739084
    </b>
  </p>
  <EventActions
    adminSection={true}
    attendances={
      Array [
        1,
        2,
        3,
      ]
    }
    id={1}
    onCancelError={[Function]}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
    onJoinError={[Function]}
    onUpdateAttendance={[Function]}
  />
</div>
`;
